--- a/AMSAutomatization/static/style.css
+++ b/AMSAutomatization/static/style.css
@@ -25,69 +25,37 @@ body {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
-/* The container */
 .container {
-  display: block;
-  position: relative;
-  padding-left: 35px;
-  cursor: pointer;
-  font-size: 22px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+  padding-left: 10px;
+  font-size: x-large;
 }
 
-/* Hide the browser's default checkbox */
-.container input {
-  position: absolute;
+.inputlabel{
+  font-size: x-large;
+  color: white;
+  padding-left: 50px;
+}
+
+.inputtext{
+  font-size: x-large;
+}
+
+
+.ex3 .hide3 {
+  width: 50%;
+  display: block;
+  height: 0; /* any arbitrary height but best at the minimum initial height you would want. */
   opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
+  transition: all 0.5s ease;
+  border-left: 1px;
+  border-right: 1px;
 }
-
-/* Create a custom checkbox */
-.checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 25px;
-  width: 25px;
-  background-color: #eee;
+.inner3 {
+  padding: 10px;
 }
-
-/* On mouse-over, add a grey background color */
-.container:hover input ~ .checkmark {
-  background-color: #ccc;
-}
-
-/* When the checkbox is checked, add a blue background */
-.container input:checked ~ .checkmark {
-  background-color: #2196F3;
-}
-
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-
-/* Show the checkmark when checked */
-.container input:checked ~ .checkmark:after {
-  display: block;
-}
-
-/* Style the checkmark/indicator */
-.container .checkmark:after {
-  left: 9px;
-  top: 5px;
-  width: 5px;
-  height: 10px;
-  border: solid white;
-  border-width: 0 3px 3px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
+.ex3 input[type="checkbox"]:checked + .hide3 {
+  height: 50px;
+  opacity: 100;
+  display: table;
+  overflow: hidden;
 }
