--- a/AMSAutomatization/templates/install.html
+++ b/AMSAutomatization/templates/install.html
@@ -11,7 +11,7 @@
     <div style="background-color: rgb(0, 72, 114); text-align: left; font-size: 2em; padding-bottom: 20px;">
 		<div style="text-align: center;">
 			<label for="webapp" class="container" style="text-align: center; padding-bottom: 30px; color: rgb(161, 142, 142); color: white; font-size: 1em;"> 
-				Installing selected tools...
+				Installed selected tools...
 			</label><br>
 		</div>
     </div>
