--- a/AMSAutomatization/templates/home.html
+++ b/AMSAutomatization/templates/home.html
@@ -35,7 +35,7 @@
 							style="float: left; margin-top: 17px; width: 25px; height: 25px;" />
 						<div class="hide3">
 							<label for="password" class="inputlabel"> Password </label>
-							<input type="text" id="password" name="password" size="25" class="inputtext" />
+							<input type="password" id="password" name="password" size="25" class="inputtext" />
 						</div>
 					</div>
 					<div class="ex3">
