--- a/AMSAutomatization/templates/home.html
+++ b/AMSAutomatization/templates/home.html
@@ -22,7 +22,7 @@
 				<div style="padding-left: 34%;">
 					<div>
 						<label for="ip_host" class="inputlabel" style="padding-left: 0px"> IP Host</label>
-						<input type="text" id="ip_host" name="ip_host" size="25" class="inputtext" />
+						<input type="text" id="ip_host" name="ip_host" size="25" class="inputtext" required/>
 					</div>
 					<div class="ex3">
 						<label for="webapp" class="container" style="color: white"> Web App </label>
