--- a/AMSAutomatization/templates/home.html
+++ b/AMSAutomatization/templates/home.html
@@ -4,6 +4,7 @@
 <head>
 	<title>AMS Automatization</title>
 	<link rel="stylesheet" href="../static/style.css" type="text/css" />
+	<link rel="icon" type="image/x-icon" href="icon.ico">
 	
 	<script>
 	function autocheck(){
