--- a/AMSAutomatization/templates/home.html
+++ b/AMSAutomatization/templates/home.html
@@ -9,9 +9,9 @@
 	<script>
 	function autocheck(){
 		var chk1 = document.getElementById("alertmanager");
-		var chk2 = document.getElementById("grafana");
-  		if( chk2.checked ) {
-    			chk1.checked = true;
+		var chk2 = document.getElementById("prometheus");
+  		if( chk1.checked ) {
+    			chk2.checked = true;
   		}
 	}
 	
