--- a/AMSAutomatization/templates/home.html
+++ b/AMSAutomatization/templates/home.html
@@ -55,7 +55,7 @@
 					</div>
 					<div class="ex3">
 						<label for="prometheus" class="container" style="color: white"> Prometheus </label>
-						<input id="prometheus" name="prometheus" type="checkbox"
+						<input id="prometheus" onclick="autocheck()" name="prometheus" type="checkbox"
 							style="float: left; margin-top: 17px; width: 25px; height: 25px;" />
 					</div>
 					<div class="ex3">
@@ -72,7 +72,7 @@
 					</div>
 					<div class="ex3">
 						<label for="grafana" class="container" style="color: white"> Grafana </label>
-						<input id="grafana" onclick="autocheck()" name="grafana" type="checkbox"
+						<input id="grafana" name="grafana" type="checkbox"
 							style="float: left; margin-top: 17px; width: 25px; height: 25px;" />
 					</div>
 				</div>
