--- a/AMSAutomatization/templates/home.html
+++ b/AMSAutomatization/templates/home.html
@@ -5,23 +5,20 @@
 	<title>AMS Automatization</title>
 	<link rel="stylesheet" href="../static/style.css" type="text/css" />
 	<link rel="icon" type="image/x-icon" href="../static/icon.ico">
-	
+
 	<script>
-	function autocheck(){
-		var chk1 = document.getElementById("alertmanager");
-		var chk2 = document.getElementById("prometheus");
-  		if( chk1.checked ) {
-    			chk2.checked = true;
-  		}
-	}
-	
-		
-	
+		function autocheck() {
+			var chk1 = document.getElementById("alertmanager");
+			var chk2 = document.getElementById("prometheus");
+			if (chk1.checked) {
+				chk2.checked = true;
+			}
+		}
 	</script>
 </head>
 
 <body style="background-color: rgb(0, 72, 114)">
-	
+
 	<div style="background-color: rgb(0, 72, 114); text-align: center; font-size: 2em;">
 		<h1 style="color: white">AMS Automatization</h1>
 	</div>
@@ -33,11 +30,11 @@
 			</label><br>
 		</div>
 		<div style="padding-top: 20px; padding-bottom: 50px;">
-			<form action="/install" method="post">
+			<form action="/installing" method="post">
 				<div style="padding-left: 34%;">
 					<div>
 						<label for="ip_host" class="inputlabel" style="padding-left: 0px"> IP Host</label>
-						<input type="text" id="ip_host" name="ip_host" size="25" class="inputtext" required/>
+						<input type="text" id="ip_host" name="ip_host" size="25" class="inputtext" required />
 					</div>
 					<div class="ex3">
 						<label for="webapp" class="container" style="color: white"> Web App </label>
@@ -57,6 +54,14 @@
 						<label for="prometheus" class="container" style="color: white"> Prometheus </label>
 						<input id="prometheus" onclick="autocheck()" name="prometheus" type="checkbox"
 							style="float: left; margin-top: 17px; width: 25px; height: 25px;" />
+						<div class="hide3">
+							<p class="inputlabel" style="margin: 10px 0px">Insert IPs</p>
+							<label for="kubeStateMetrics" class="inputlabel"> Kube-state-metrics </label>
+							<input type="text" id="kubeStateMetrics" name="kubeStateMetrics" size="25" class="inputtext">
+							<br>
+							<label for="nodeExporter" class="inputlabel"> Node-exporter </label>
+							<input type="text" id="nodeExporter" name="nodeExporter" size="25" class="inputtext" />
+						</div>
 					</div>
 					<div class="ex3">
 						<label for="alertmanager" class="container" style="color: white"> Alert Manager </label>
@@ -77,7 +82,7 @@
 					</div>
 				</div>
 				<div style="text-align: center; padding-top: 80px;">
-					<input type="submit" class="button buttonsh" value="Install" />
+					<input type="submit" class="button buttonsh" value="Submit" />
 				</div>
 			</form>
 		</div>
