--- a/AMSAutomatization/templates/home.html
+++ b/AMSAutomatization/templates/home.html
@@ -34,7 +34,7 @@
 				<div style="padding-left: 34%;">
 					<div>
 						<label for="ip_host" class="inputlabel" style="padding-left: 0px"> IP Host</label>
-						<input type="text" id="ip_host" name="ip_host" size="25" class="inputtext" required />
+						<input type="text" id="ip_host" name="ip_host" size="25" class="inputtext" placeholder="0.0.0.0" required />
 					</div>
 					<div class="ex3">
 						<label for="webapp" class="container" style="color: white"> Web App </label>
@@ -47,7 +47,7 @@
 							style="float: left; margin-top: 17px; width: 25px; height: 25px;" />
 						<div class="hide3">
 							<label for="password" class="inputlabel"> Password </label>
-							<input type="password" id="password" name="password" size="25" class="inputtext" />
+							<input type="password" id="password" name="password" size="25" placeholder="Password" class="inputtext" />
 						</div>
 					</div>
 					<div class="ex3">
@@ -57,10 +57,10 @@
 						<div class="hide3">
 							<p class="inputlabel" style="margin: 10px 0px">Insert IPs</p>
 							<label for="kubeStateMetrics" class="inputlabel"> Kube-state-metrics </label>
-							<input type="text" id="kubeStateMetrics" name="kubeStateMetrics" size="25" class="inputtext">
+							<input type="text" id="kubeStateMetrics" name="kubeStateMetrics" size="25" placeholder="0.0.0.0" class="inputtext">
 							<br>
 							<label for="nodeExporter" class="inputlabel"> Node-exporter </label>
-							<input type="text" id="nodeExporter" name="nodeExporter" size="25" class="inputtext" />
+							<input type="text" id="nodeExporter" name="nodeExporter" size="25" placeholder="0.0.0.0,0.0.0.1,..." class="inputtext" />
 						</div>
 					</div>
 					<div class="ex3">
@@ -69,10 +69,10 @@
 							style="float: left; margin-top: 17px; width: 25px; height: 25px;" />
 						<div class="hide3">
 							<label for="url" class="inputlabel"> WebWook URL </label>
-							<input type="text" id="url" name="url" size="25" class="inputtext"></label>
+							<input type="text" id="url" name="url" size="25" placeholder="https://hooks.slack.com/..." class="inputtext"></label>
 							<br>
 							<label for="channel" class="inputlabel"> Channel Name </label>
-							<input type="text" id="channel" name="channel" size="25" class="inputtext" />
+							<input type="text" id="channel" name="channel" size="25" placeholder="#channelname" class="inputtext" />
 						</div>
 					</div>
 					<div class="ex3">
