button installed page

--- a/AMSAutomatization/templates/installed.html
+++ b/AMSAutomatization/templates/installed.html
@@ -15,6 +15,13 @@
 				Installed selected tools
 			</label><br>
 		</div>
+		<div style="padding-top: 20px; padding-bottom: 50px;">
+			<form action="/" method="post">
+				<div style="text-align: center; padding-top: 80px;">
+					<input type="submit" class="button buttonsh" value="Home" />
+				</div>
+			</form>
+		</div>
     </div>
 </body>
 </html>
